Prevent opacity applying to content on firefox

--- a/css/home.css
+++ b/css/home.css
@@ -52,6 +52,9 @@
 
 .animaterevealhide {
 	opacity: 0;
+	@-moz-document url-prefix() {
+		opacity: 1;
+	}
 	animation: reveal auto;
 	animation-timeline: --main-timeline;
 	animation-duration: 1ms;
